# LLM-Parameter-Guesser

./: README.md  llm_communication.py  main.py  pyproject.toml  speech_to_text.py
